<resources>
	<string name="app_name">UnicodePad</string>
	<string name="delete">Delete</string>
	<string name="desc">Detail</string>
	<string name="find">Find</string>
	<string name="fhint">Enter a character name or Unihan reading</string>
	<string name="inlist">Find in list</string>
	<string name="copied">Copied to clipboard</string>
	<string name="finish">Enter</string>
	<string name="share">Share</string>
	<string name="undo">Undo</string>
	<string name="redo">Redo</string>
	<string name="sessions">Sessions</string>
	<string name="session_new">New session</string>
	<string name="session_current">Current session</string>
	<string name="session_previous">Previous session</string>
	<string name="session_copied">Copied</string>
	<string name="session_shared">Shared</string>
	<string name="session_delete">Delete session</string>
	<string name="convert">Convert</string>
	<string name="convert_">Convert…</string>
	<string name="font">Font</string>
	<string name="favorite">Favorite</string>
	<string name="recent">Recent</string>
	<string name="list">List</string>
	<string name="edit">Input</string>
	<string name="emoji">Emoji</string>
	<string name="rsindex">RSIndex</string>
	<string name="rsindex_group">Radical #%1$d (%2$s) %3$s</string>
	<string name="rsindex_subgroup">Radical #%1$d (%2$s) %3$s / %4$d strokes</string>
	<string name="normal">Default</string>
	<string name="locale_default">Default (%s)</string>
	<string name="locale_other">Other…</string>
	<string name="locale_title">Locale</string>
	<string name="input">Input</string>
	<string name="remrec">Remove</string>
	<string name="add">Select…</string>
	<string name="mark">Mark</string>
	<string name="rem">Remove…</string>
	<string name="code">Codepoint</string>
	<string name="nocode">Invalid codepoint</string>
	<string name="cantopen">Cannot open the font</string>
	<string name="cantread">Cannot access; the application may not have permission to read</string>
	<string name="denied">You have denied access. To browse SD card, please grant the storage permission from Apps setting.</string>
	<string name="font_manage">Manage fonts…</string>
	<string name="font_rename">Rename…</string>
	<string name="font_edit">Edit fallback</string>
	<string name="font_delete">Delete</string>
	<string name="font_add">Add font…</string>
	<string name="font_add_fallback">Add font fallback…</string>
	<string name="font_add_existing">Add existing font…</string>
	<string name="font_no_existing">No existing fonts available</string>
	<string name="font_add_file">Add font from file…</string>
	<string name="explorer_not_found">File explorer not found. Please install a file explorer app to select a font file.</string>
	<string name="script_0">0 Basic Latin</string>
	<string name="script_80">80 Latin-1 Supplement</string>
	<string name="script_100">100 Latin Extended-A</string>
	<string name="script_180">180 Latin Extended-B</string>
	<string name="script_250">250 IPA Extensions</string>
	<string name="script_2B0">2B0 Spacing Modifier Letters</string>
	<string name="script_300">300 Combining Diacritical Marks</string>
	<string name="script_370">370 Greek and Coptic</string>
	<string name="script_400">400 Cyrillic</string>
	<string name="script_500">500 Cyrillic Supplement</string>
	<string name="script_530">530 Armenian</string>
	<string name="script_590">590 Hebrew</string>
	<string name="script_600">600 Arabic</string>
	<string name="script_700">700 Syriac</string>
	<string name="script_750">750 Arabic Supplement</string>
	<string name="script_780">780 Thaana</string>
	<string name="script_7C0">7C0 NKo</string>
	<string name="script_800">800 Samaritan</string>
	<string name="script_840">840 Mandaic</string>
	<string name="script_860">860 Syriac Supplement</string>
	<string name="script_870">870 Arabic Extended-B</string>
	<string name="script_8A0">8A0 Arabic Extended-A</string>
	<string name="script_900">900 Devanagari</string>
	<string name="script_980">980 Bengali</string>
	<string name="script_A00">A00 Gurmukhi</string>
	<string name="script_A80">A80 Gujarati</string>
	<string name="script_B00">B00 Oriya</string>
	<string name="script_B80">B80 Tamil</string>
	<string name="script_C00">C00 Telugu</string>
	<string name="script_C80">C80 Kannada</string>
	<string name="script_D00">D00 Malayalam</string>
	<string name="script_D80">D80 Sinhala</string>
	<string name="script_E00">E00 Thai</string>
	<string name="script_E80">E80 Lao</string>
	<string name="script_F00">F00 Tibetan</string>
	<string name="script_1000">1000 Myanmar</string>
	<string name="script_10A0">10A0 Georgian</string>
	<string name="script_1100">1100 Hangul Jamo</string>
	<string name="script_1200">1200 Ethiopic</string>
	<string name="script_1380">1380 Ethiopic Supplement</string>
	<string name="script_13A0">13A0 Cherokee</string>
	<string name="script_1400">1400 Unified Canadian Aboriginal Syllabics</string>
	<string name="script_1680">1680 Ogham</string>
	<string name="script_16A0">16A0 Runic</string>
	<string name="script_1700">1700 Tagalog</string>
	<string name="script_1720">1720 Hanunoo</string>
	<string name="script_1740">1740 Buhid</string>
	<string name="script_1760">1760 Tagbanwa</string>
	<string name="script_1780">1780 Khmer</string>
	<string name="script_1800">1800 Mongolian</string>
	<string name="script_18B0">18B0 Unified Canadian Aboriginal Syllabics Extended</string>
	<string name="script_1900">1900 Limbu</string>
	<string name="script_1950">1950 Tai Le</string>
	<string name="script_1980">1980 New Tai Lue</string>
	<string name="script_19E0">19E0 Khmer Symbols</string>
	<string name="script_1A00">1A00 Buginese</string>
	<string name="script_1A20">1A20 Tai Tham</string>
	<string name="script_1AB0">1AB0 Combining Diacritical Marks Extended</string>
	<string name="script_1B00">1B00 Balinese</string>
	<string name="script_1B80">1B80 Sundanese</string>
	<string name="script_1BC0">1BC0 Batak</string>
	<string name="script_1C00">1C00 Lepcha</string>
	<string name="script_1C50">1C50 Ol Chiki</string>
	<string name="script_1C80">1C80 Cyrillic Extended-C</string>
	<string name="script_1C90">1C90 Georgian Extended</string>
	<string name="script_1CC0">1CC0 Sundanese Supplement</string>
	<string name="script_1CD0">1CD0 Vedic Extensions</string>
	<string name="script_1D00">1D00 Phonetic Extensions</string>
	<string name="script_1D80">1D80 Phonetic Extensions Supplement</string>
	<string name="script_1DC0">1DC0 Combining Diacritical Marks Supplement</string>
	<string name="script_1E00">1E00 Latin Extended Additional</string>
	<string name="script_1F00">1F00 Greek Extended</string>
	<string name="script_2000">2000 General Punctuation</string>
	<string name="script_2070">2070 Superscripts and Subscripts</string>
	<string name="script_20A0">20A0 Currency Symbols</string>
	<string name="script_20D0">20D0 Combining Diacritical Marks for Symbols</string>
	<string name="script_2100">2100 Letterlike Symbols</string>
	<string name="script_2150">2150 Number Forms</string>
	<string name="script_2190">2190 Arrows</string>
	<string name="script_2200">2200 Mathematical Operators</string>
	<string name="script_2300">2300 Miscellaneous Technical</string>
	<string name="script_2400">2400 Control Pictures</string>
	<string name="script_2440">2440 Optical Character Recognition</string>
	<string name="script_2460">2460 Enclosed Alphanumerics</string>
	<string name="script_2500">2500 Box Drawing</string>
	<string name="script_2580">2580 Block Elements</string>
	<string name="script_25A0">25A0 Geometric Shapes</string>
	<string name="script_2600">2600 Miscellaneous Symbols</string>
	<string name="script_2700">2700 Dingbats</string>
	<string name="script_27C0">27C0 Miscellaneous Mathematical Symbols-A</string>
	<string name="script_27F0">27F0 Supplemental Arrows-A</string>
	<string name="script_2800">2800 Braille Patterns</string>
	<string name="script_2900">2900 Supplemental Arrows-B</string>
	<string name="script_2980">2980 Miscellaneous Mathematical Symbols-B</string>
	<string name="script_2A00">2A00 Supplemental Mathematical Operators</string>
	<string name="script_2B00">2B00 Miscellaneous Symbols and Arrows</string>
	<string name="script_2C00">2C00 Glagolitic</string>
	<string name="script_2C60">2C60 Latin Extended-C</string>
	<string name="script_2C80">2C80 Coptic</string>
	<string name="script_2D00">2D00 Georgian Supplement</string>
	<string name="script_2D30">2D30 Tifinagh</string>
	<string name="script_2D80">2D80 Ethiopic Extended</string>
	<string name="script_2DE0">2DE0 Cyrillic Extended-A</string>
	<string name="script_2E00">2E00 Supplemental Punctuation</string>
	<string name="script_2E80">2E80 CJK Radicals Supplement</string>
	<string name="script_2F00">2F00 Kangxi Radicals</string>
	<string name="script_2FF0">2FF0 Ideographic Description Characters</string>
	<string name="script_3000">3000 CJK Symbols and Punctuation</string>
	<string name="script_3040">3040 Hiragana</string>
	<string name="script_30A0">30A0 Katakana</string>
	<string name="script_3100">3100 Bopomofo</string>
	<string name="script_3130">3130 Hangul Compatibility Jamo</string>
	<string name="script_3190">3190 Kanbun</string>
	<string name="script_31A0">31A0 Bopomofo Extended</string>
	<string name="script_31C0">31C0 CJK Strokes</string>
	<string name="script_31F0">31F0 Katakana Phonetic Extensions</string>
	<string name="script_3200">3200 Enclosed CJK Letters and Months</string>
	<string name="script_3300">3300 CJK Compatibility</string>
	<string name="script_3400">3400 CJK Unified Ideographs Extension A</string>
	<string name="script_4DC0">4DC0 Yijing Hexagram Symbols</string>
	<string name="script_4E00">4E00 CJK Unified Ideographs</string>
	<string name="script_A000">A000 Yi Syllables</string>
	<string name="script_A490">A490 Yi Radicals</string>
	<string name="script_A4D0">A4D0 Lisu</string>
	<string name="script_A500">A500 Vai</string>
	<string name="script_A640">A640 Cyrillic Extended-B</string>
	<string name="script_A6A0">A6A0 Bamum</string>
	<string name="script_A700">A700 Modifier Tone Letters</string>
	<string name="script_A720">A720 Latin Extended-D</string>
	<string name="script_A800">A800 Syloti Nagri</string>
	<string name="script_A830">A830 Common Indic Number Forms</string>
	<string name="script_A840">A840 Phags-pa</string>
	<string name="script_A880">A880 Saurashtra</string>
	<string name="script_A8E0">A8E0 Devanagari Extended</string>
	<string name="script_A900">A900 Kayah Li</string>
	<string name="script_A930">A930 Rejang</string>
	<string name="script_A960">A960 Hangul Jamo Extended-A</string>
	<string name="script_A980">A980 Javanese</string>
	<string name="general">General</string>
	<string name="appearance">Appearance</string>
	<string name="behaviour">Behavior</string>
	<string name="textsize_desc">Text size of edit box</string>
	<string name="column_desc">Columns in grid</string>
	<string name="columnl_desc">Columns in grid (landscape)</string>
	<string name="version_desc">Unicode version</string>
	<string name="download_desc">Download Noto fonts…</string>
	<string name="download_uri">https://fonts.google.com/noto</string>
	<string name="tabs_desc">Tabs settings…</string>
	<string name="padding_desc">Padding of grid</string>
	<string name="gridsize_desc">Text size of grid</string>
	<string name="viewsize_desc">Text size of large view</string>
	<string name="checker_desc">Checker opacity in large view (%)</string>
	<string name="lines_desc">Show font metrics in large view</string>
	<string name="shrink_desc">Shrink font to fit width</string>
	<string name="recent_desc">Maximum number of recent list</string>
	<string name="theme_desc">Theme</string>
	<string name="theme_title">Applied after restart</string>
	<string name="scroll_desc">UI scroll</string>
	<string name="ime_desc">Disable IME</string>
	<string name="clear_desc">Show clear button</string>
	<string name="clear" translatable="false">⌧</string>
	<string name="erase" translatable="false">⌫</string>
</resources>